support recycler view

--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">PullToRefreshAndLoadMore</string>
+    <string name="title_activity_recycler_view">RecyclerViewActivity</string>
 </resources>
