--- a/PullToRefresh/src/main/res/values/strings.xml
+++ b/PullToRefresh/src/main/res/values/strings.xml
@@ -1,15 +1,14 @@
 <resources>
     <string name="app_name">Library</string>
 
-    <string name="pull_to_refresh">下拉刷新</string>
-    <string name="release_to_refresh">释放立即刷新</string>
-    <string name="refreshing">正在刷新...</string>
-    <string name="refresh_succeed">刷新成功</string>
-    <string name="refresh_fail">刷新失败</string>
-    <string name="pull_up_to_load">上拉加载更多</string>
-    <string name="release_to_load">释放立即加载</string>
-    <string name="loading">正在加载...</string>
-    <string name="load_succeed">加载成功</string>
-    <string name="load_fail">加载失败</string>
-    <string name="navigate">导航</string>
+    <string name="xw_ptr_pull_to_refresh">下拉刷新</string>
+    <string name="xw_ptr_release_to_refresh">释放立即刷新</string>
+    <string name="xw_ptr_refreshing">正在刷新&#8230;</string>
+    <string name="xw_ptr_refresh_succeeded">刷新成功</string>
+    <string name="xw_ptr_refresh_failed">刷新失败</string>
+    <string name="xw_ptr_pull_up_to_load">上拉加载更多</string>
+    <string name="xw_ptr_release_to_load">释放立即加载</string>
+    <string name="xw_ptr_loading">正在加载&#8230;</string>
+    <string name="xw_ptr_load_succeeded">加载成功</string>
+    <string name="xw_ptr_load_failed">加载失败</string>
 </resources>
